Fix z-index & smaller logo

--- a/src/css/_city-details.scss
+++ b/src/css/_city-details.scss
@@ -1,4 +1,5 @@
 @use "theme/colors-original";
+@use "theme/zindex";
 
 .city-details-popup {
   display: none;
@@ -10,7 +11,7 @@
   overflow: auto;
 
   position: absolute;
-  z-index: 1100;
+  z-index: zindex.$scorecard;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
