--- a/src/css/_counter.scss
+++ b/src/css/_counter.scss
@@ -1,4 +1,5 @@
 @use "theme/colors-original";
+@use "theme/zindex";
 
 $top-offset: 3.5em;
 
@@ -7,7 +8,7 @@ $top-offset: 3.5em;
   background-color: colors-original.$white;
   top: $top-offset;
   left: 3em;
-  z-index: 900;
+  z-index: zindex.$counter;
   padding: 0.2em 0.4em;
 
   border: solid colors-original.$gray-light 1px;
