--- a/src/css/_no-requirements-toggle.scss
+++ b/src/css/_no-requirements-toggle.scss
@@ -8,22 +8,6 @@ $toggle-circle: calc(2.4 * $toggle-size);
   padding: 0.2em;
 }
 
-.no-requirements-toggle-container {
-  position: absolute;
-  background-color: colors-original.$white;
-  top: 7em;
-  left: 3em;
-  z-index: 900;
-  padding: 0.2em 0.4em;
-
-  border: solid colors-original.$gray-light 1px;
-  border-radius: 2px;
-
-  @media only screen and (min-width: 48em) {
-    top: 7.5em;
-  }
-}
-
 .toggle {
   cursor: pointer;
   display: flex;
