--- a/src/css/_population-slider.scss
+++ b/src/css/_population-slider.scss
@@ -6,7 +6,6 @@
 // }
 
 .population-slider-container {
-  z-index: 1100;
   display: flex;
   flex-direction: column;
   align-items: center;
